syntax = "proto3";

option go_package = "api/pb/chat;chat";

package chat;

service ChatService {
  rpc SendMessage (ChatMessage) returns (Empty);
  rpc ChatStream (ChatStreamRequest) returns (stream ChatMessage);
}

message ChatMessage {
  string id = 1;
  User user = 2;
  string text = 3;
  int64 timestamp = 4; // время отправки (Unix time, в миллисекундах или секундах)
  MessageType type = 5; // тип сообщения
  uint32 users_count = 6; // Кол-во участников чата
}

message User {
  uint64 id = 1;
  string username = 2;
  string color = 3;
}

enum MessageType {
  MESSAGE_UNKNOWN = 0;
  MESSAGE_USER = 1;     // обычное сообщение пользователя
  MESSAGE_SYSTEM = 2;   // системное сообщение
  MESSAGE_SELF = 3;     // сообщение от самого себя
}

message ChatStreamRequest {
  User user = 1;
}

message Empty {}